[gd_scene load_steps=6 format=3 uid="uid://cther6q38cub5"]

[ext_resource type="Script" path="res://scripts/ui/EditorUI.gd" id="1_edcfj"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_0xvhp"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_p85c5"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_7jekc"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_id1qr"]

[node name="EditorUI" type="Container" node_paths=PackedStringArray("hextypes_itemlist", "units_itemlist", "other_itemlist", "actions_itemlist")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("1_edcfj")
hextypes_itemlist = NodePath("Panel/VBoxContainer/FlowContainer/hextypes")
units_itemlist = NodePath("Panel/VBoxContainer/FlowContainer/units")
other_itemlist = NodePath("Panel/VBoxContainer/FlowContainer/other")
actions_itemlist = NodePath("Panel/VBoxContainer/FlowContainer/actions")

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_stretch_ratio = 1.28
mouse_filter = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 2

[node name="FlowContainer" type="FlowContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
vertical = true
metadata/_edit_use_anchors_ = true

[node name="hextypes" type="ItemList" parent="Panel/VBoxContainer/FlowContainer"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
allow_reselect = true
allow_search = false
auto_height = true
text_overrun_behavior = 0
item_count = 3
item_0/text = "placeholder"
item_0/icon = SubResource("PlaceholderTexture2D_0xvhp")
item_1/text = "placeholder"
item_1/icon = SubResource("PlaceholderTexture2D_p85c5")
item_2/text = "placeholder"
item_2/icon = SubResource("PlaceholderTexture2D_7jekc")

[node name="units" type="ItemList" parent="Panel/VBoxContainer/FlowContainer"]
auto_translate_mode = 1
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
allow_reselect = true
allow_search = false
auto_height = true
text_overrun_behavior = 0
item_count = 1
item_0/text = "placeholder"
item_0/icon = SubResource("PlaceholderTexture2D_0xvhp")

[node name="other" type="ItemList" parent="Panel/VBoxContainer/FlowContainer"]
auto_translate_mode = 1
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
allow_reselect = true
allow_search = false
auto_height = true
text_overrun_behavior = 0
item_count = 2
item_0/text = "Settlement"
item_0/icon = SubResource("PlaceholderTexture2D_0xvhp")
item_1/text = "River"
item_1/icon = SubResource("PlaceholderTexture2D_p85c5")

[node name="actions" type="ItemList" parent="Panel/VBoxContainer/FlowContainer"]
auto_translate_mode = 1
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
allow_reselect = true
allow_search = false
auto_height = true
text_overrun_behavior = 0
item_count = 4
item_0/text = "Select"
item_0/icon = SubResource("PlaceholderTexture2D_0xvhp")
item_1/text = "Save"
item_1/icon = SubResource("PlaceholderTexture2D_p85c5")
item_2/text = "Load"
item_2/icon = SubResource("PlaceholderTexture2D_7jekc")
item_3/text = "Start Game"
item_3/icon = SubResource("PlaceholderTexture2D_id1qr")

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="settlement_data" type="HBoxContainer" parent="Panel/VBoxContainer"]
visible = false
layout_mode = 2

[node name="Button" type="Button" parent="Panel/VBoxContainer/settlement_data"]
layout_mode = 2
text = "X"

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/settlement_data"]
layout_mode = 2

[node name="s_name" type="Label" parent="Panel/VBoxContainer/settlement_data/VBoxContainer"]
layout_mode = 2

[node name="s_pop" type="Label" parent="Panel/VBoxContainer/settlement_data/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/VBoxContainer/settlement_data"]
auto_translate_mode = 1
layout_mode = 2

[node name="s_progress" type="Label" parent="Panel/VBoxContainer/settlement_data/VBoxContainer2"]
auto_translate_mode = 1
layout_mode = 2

[node name="s_influence" type="Label" parent="Panel/VBoxContainer/settlement_data/VBoxContainer2"]
auto_translate_mode = 1
layout_mode = 2

[connection signal="item_clicked" from="Panel/VBoxContainer/FlowContainer/hextypes" to="." method="_on_hextypes_item_clicked"]
[connection signal="item_clicked" from="Panel/VBoxContainer/FlowContainer/units" to="." method="_on_units_item_clicked"]
[connection signal="item_clicked" from="Panel/VBoxContainer/FlowContainer/other" to="." method="_on_other_item_clicked"]
[connection signal="item_clicked" from="Panel/VBoxContainer/FlowContainer/actions" to="." method="_on_actions_item_clicked"]
[connection signal="pressed" from="Panel/VBoxContainer/settlement_data/Button" to="." method="_close_settlement_data"]
